# lang-fkv

./: .build-config.yml  .gitignore  .glottologid.txt  CITATION.cff  KvenDocumentation.jspwiki  Links.md  Makefile.in  PuuttuvienSanojenNouto.md  README  README.markdown  README.md  TwolcProblems.md  V-v_v1_tuoda_var_text  _config.yml  abbreviations-affixes-fst-src.md  abbreviations-stems.md  adjectives-affixes-fst-src.md  adjectives-stems-fst-src.md  adverbs-stems-fst-src.md  adverbs-stems.md  autogen.sh  closed-stems-fst-src.md  closed-stems.md  configure.ac  disambiguator-syntax.md  fkv-abbreviations-stems-fst-src.md  fkv-abbreviations-stems.md  fkv.md  giella-fkv.pc.in  graadivaihtelu.txt  grammarchecker-grammarcheckers-tools.md  index-header.md  index.md  ki_paakirjoitus.txt  korp-cg3-src.md  lemmacount.json  manifest.toml  manifest.toml.in  n_11-feilit.md  nouns-affixes-fst-src.md  (+85 more)
doc/: Arbeidsplan.jspwiki  KaikkiGeneroidutParadigmat.jspwiki  KvenDocumentation.jspwiki  LingvistinenSuunnitelma.jspwiki  Links.jspwiki  Makefile.am  MissingLists.jspwiki  Morfofonologia.jspwiki  Tehtavat.jspwiki  TestiPlGen.xml  TestiPlIll.xml  TestiPlPar.xml  TestiSgIll.xml  TestiSgPar.xml  TwolcProblems.jspwiki  WhatIsThis.jspwiki  abbreviations-stems.jspwiki  adjectives-affixes.jspwiki  adjectives-stems.jspwiki  adposiittit.txt  adverbs-stems.jspwiki  closed-stems.jspwiki  disambiguation-syntax.jspwiki  disambiguator-syntax.jspwiki  fkv-phon-phonology.jspwiki  fkv.jspwiki  graadivaihtelu.txt  index.xml  ki_paakirjoitus.txt  link-header.jspwiki  n_11-feilit.jspwiki  nominien_jaottelusta.jspwiki  nominien_jaottelusta.txt  nouns-affixes.jspwiki  nouns-stems.jspwiki  phonology-morphology.jspwiki  postpositions-stems.jspwiki  preamble.jspwiki  prepositions-stems.jspwiki  pronouns-affixes.jspwiki  (+6 more)
doc/corpus/: RuijanKaikuYliot.jspwiki
doc/meetings/: 050314.jspwiki  130306.jspwiki  130315.jspwiki  130322.jspwiki  130405.jspwiki  130503.jspwiki  130607.jspwiki  130612.jspwiki  130920.jspwiki  140117.jspwiki  140305.jspwiki  140318.jspwiki  140401.jspwiki  140515.jspwiki  150124.jspwiki  150824.jspwiki  150929.jspwiki  150929_ja_16XXXX.jspwiki  170818.jspwiki  181105.jspwiki  181119.jspwiki  190122.jspwiki  190214.jspwiki  190222.jspwiki  190328.jspwiki  190403.jspwiki  190502.jspwiki  190516.jspwiki  190528.jspwiki  190923.jspwiki  191015.jspwiki  191217.jspwiki  200424.jspwiki  201006.jspwiki
doc/testit/: AdjTestiCompSgNom.xml  AdjTestiPlGen.xml  AdjTestiPlIll.xml  AdjTestiPlPar.xml  AdjTestiSgGen.xml  AdjTestiSgIll.xml  AdjTestiSgPar.xml  AdjTestiSuperlSgNom.xml  PronTesti.xml  PropTestiPlCom.xml  PropTestiPlEss.xml  PropTestiPlGen.xml  PropTestiPlIll.xml  PropTestiPlPar.xml  PropTestiSgGen.xml  PropTestiSgIll.xml  PropTestiSgPar.xml  TestiPlCom.xml  TestiPlEss.xml  TestiPlGen.xml  TestiPlIll.xml  TestiPlIne.xml  TestiPlPar.xml  TestiSgGen.xml  TestiSgIll.xml  TestiSgPar.xml  VerbTestiActPrfPrc.xml  VerbTestiActPrsPrc.xml  VerbTestiIndPrsPl1.xml  VerbTestiIndPrsPl3.xml  VerbTestiIndPrsSg1.xml  VerbTestiIndPrsSg3.xml  VerbTestiIndPrtPl1.xml  VerbTestiIndPrtPl3.xml  VerbTestiIndPrtSg1.xml  VerbTestiIndPrtSg3.xml  VerbTestiPassPrfPrc.xml  VerbTestiPassPrsPrc.xml
doc/testreports/: Virhe131125.jspwiki
docs/: Arbeidsplan.jspwiki  KaikkiGeneroidutParadigmat.jspwiki  KaikkiGeneroidutParadigmat.md  KvenDocumentation.jspwiki  LingvistinenSuunnitelma.jspwiki  LingvistinenSuunnitelma.md  Links.md  Makefile.am  MissingLists.jspwiki  Morfofonologia.md  NominienTilanne.jspwiki  PuuttuvienSanojenNouto.jspwiki  RapporttiElokuu2014.jspwiki  Tehtavat.md  WhatIsThis.jspwiki  YamltestitMaaliskuu2019.jspwiki  _config.yml  adjectives-affixes.jspwiki  adjectives-stems.md  adverbs-stems.md  closed-stems.md  disambiguator-syntax.jspwiki  fkv.jspwiki  fkv.md  index-header.md  index.md  kurkkio-kurkkii.txt  language-map.md  n_11-feilit.jspwiki  nominien_jaottelusta.jspwiki  nominien_jaottelusta.md  nouns-affixes.jspwiki  nouns-stems.jspwiki  phonology-morphology.md  postpositions-stems.jspwiki  prepositions-stems.jspwiki  pronouns-affixes.md  pronouns-stems.jspwiki  propernouns-stems.md  root-morphology.jspwiki  (+9 more)
docs/badgedata/: fst-lemmacount.json  fst-variants.json  speller-suggestions-Jok.json  speller-suggestions-Por.json  speller-suggestions-Var.json  speller-suggestions.json
docs/corpus/: RuijanKaikuYliot.md
docs/meetings/: 130306.jspwiki  130322.jspwiki  130405.jspwiki  130503.md  130607.jspwiki  140117.md  140130.jspwiki  140207.jspwiki  140305.jspwiki  140318.jspwiki  140318.md  140401.jspwiki  140424.jspwiki  140424.md  150124.md  150824.md  150929_ja_16XXXX.jspwiki  170818.jspwiki  181105.jspwiki  181119.jspwiki  181119.md  190122.md  190222.jspwiki  190328.jspwiki  190516.jspwiki  190923.jspwiki  191021.jspwiki  191217.jspwiki  200429.jspwiki  200429.md  201006.jspwiki  210106.jspwiki  210121.jspwiki  210211.jspwiki  210311.jspwiki  210311.md  210428.md  210510.md  211104.md  221111.md  (+1 more)
docs/testit/: AdjTestiCompSgNom.md  AdjTestiCompSgNom.xml  AdjTestiPlGen.md  AdjTestiPlGen.xml  AdjTestiPlIll.xml  AdjTestiPlPar.xml  AdjTestiSgGen.xml  AdjTestiSgIll.xml  AdjTestiSgPar.xml  AdjTestiSuperlSgNom.xml  PronTesti.xml  PropTestiPlCom.md  PropTestiPlCom.xml  PropTestiPlEss.md  PropTestiPlEss.xml  PropTestiPlGen.md  PropTestiPlGen.xml  PropTestiPlIll.xml  PropTestiPlPar.xml  PropTestiSgGen.xml  PropTestiSgIll.md  PropTestiSgIll.xml  PropTestiSgPar.xml  TestiPlCom.xml  TestiPlEss.xml  TestiPlGen.xml  TestiPlIll.md  TestiPlIll.xml  TestiPlIne.xml  TestiPlPar.xml  TestiSgGen.xml  TestiSgIll.md  TestiSgIll.xml  TestiSgPar.xml  VerbTestiActPrfPrc.xml  VerbTestiActPrsPrc.md  VerbTestiActPrsPrc.xml  VerbTestiIndPrsPl1.xml  VerbTestiIndPrsPl3.md  VerbTestiIndPrsPl3.xml  (+9 more)
docs/testlogs/: adjectives-lemmas.md  nouns-lemmas.md  propernouns-lemmas.md  verbs-lemmas.md
docs/testreports/: Virhe131125.md
docs/typosreport/: report-Jok.json  report-Por.json  report-Var.json  report.json
src/: Makefile  Makefile.am  Makefile.hfst  adj-fkv-lex.txt  fkv-lex.txt  noun-fkv-lex.txt  noun-fkv-morph.txt  twol-fkv.txt
(+1229 files in other folders)
