## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all jspwiki files that should be created from source files in the
# JSP_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.jspwiki

JSP_PAGES=root-morphology.jspwiki     \
		  abbreviations-stems.jspwiki \
		  adjectives-affixes.jspwiki  \
		  adjectives-stems.jspwiki    \
		  adverbs-stems.jspwiki       \
		  closed-stems.jspwiki        \
		  nouns-affixes.jspwiki       \
		  nouns-stems.jspwiki         \
		  nouns-stems.jspwiki         \
		  postpositions-stems.jspwiki \
		  prepositions-stems.jspwiki  \
		  prepositions-stems.jspwiki  \
		  pronouns-affixes.jspwiki    \
		  pronouns-stems.jspwiki      \
		  propernouns-stems.jspwiki   \
		  punctuation-stems.jspwiki   \
		  verbs-affixes.jspwiki       \
		  verbs-stems.jspwiki         \
		  phonology-morphology.jspwiki \
		  disambiguator-syntax.jspwiki
#		  acronyms-stems.jspwiki      \
# clitics-morphology.jspwiki       \
# compounding-morphology.jspwiki   \
# smi-propernouns-stems.jspwiki    \
# subjunctions-stems.jspwiki       \
# adjectives-oahpa-affixes.jspwiki \
# adjectives-affixes.jspwiki       \
# propernouns-affixes.jspwiki      \
include $(top_srcdir)/../giella-core/am-shared/doc-dir-include.am
