## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md     \
		  abbreviations-stems.md \
		  adjectives-affixes.md  \
		  adjectives-stems.md    \
		  adverbs-stems.md       \
		  closed-stems.md        \
		  nouns-affixes.md       \
		  nouns-stems.md         \
		  nouns-stems.md         \
		  postpositions-stems.md \
		  prepositions-stems.md  \
		  prepositions-stems.md  \
		  pronouns-affixes.md    \
		  pronouns-stems.md      \
		  propernouns-stems.md   \
		  punctuation-stems.md   \
		  verbs-affixes.md       \
		  verbs-stems.md         \
		  phonology-morphology.md \
		  disambiguator-syntax.md
#		  acronyms-stems.md      \
# clitics-morphology.md       \
# compounding-morphology.md   \
# smi-propernouns-stems.md    \
# subjunctions-stems.md       \
# adjectives-oahpa-affixes.md \
# adjectives-affixes.md       \
# propernouns-affixes.md      \
include $(top_srcdir)/../giella-core/am-shared/docs-dir-include.am
